Modified R code that generates plots.

--- a/Latex/kursinis_darbas.tex
+++ b/Latex/kursinis_darbas.tex
@@ -1,9 +1,4 @@
 \documentclass[12pt]{article}
-
-
-%\documentclass[17pt]{extarticle}
-
-%\usepackage{extsizes}
 \usepackage{indentfirst}
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
@@ -17,7 +12,6 @@
 \usepackage{boldline}
 \usepackage{floatrow}
 \floatsetup[table]{capposition=top}
-
 \usepackage{amsmath, amsthm, amssymb}
 \usepackage{graphicx}
 \usepackage{setspace}
@@ -26,7 +20,6 @@
 \usepackage{floatrow}
 \newfloatcommand{capbtabbox}{table}[][\FBwidth]
 \usepackage{blindtext}
-
 \onehalfspacing
 
 \newcommand{\EE}{\mathbb{E}\,} % Mean
@@ -153,6 +146,7 @@ transcription factor set.
 %%%%%%%%%%%%%%%%%%%
 % ĮVADO PUSLAPIS
 %%%%%%%%%%%%%%%%%%%
+
 \section{Įvadas}
 \subsection*{Darbo temos aktualumas}
 
@@ -203,6 +197,7 @@ gautuose panaudojus ChIP-seq metodą.
 %%%%%%%%%%%%%%%%%%%%%
 % DUOMENŲ APŽVALGA
 %%%%%%%%%%%%%%%%%%%%%
+
 \section{Duomenų bazės ir duomenys}
 \subsection{GTRD duomenų bazė}
 Tyrimui naudoti duomenys atsisiųsti iš GTRD (Gene Transcription Regulation
@@ -314,7 +309,8 @@ musculus}) ląstelių.
         metu tirtų mėginių. Eksperimente buvo siekiama patvirtinti arba
         atmesti hipotezę apie širdies stipriklių (angl. \emph{enhancer})
         identifikiavimą prie chromatino jungiantis keliems transkripcijos
-        faktoriams. \\
+        faktoriams.
+
         HL - 1 širdies raumens ląstelės buvo infekuotos su adenovirusu,
         ekspresuojančiu troponiną T, kuris skatina \emph{rtTA} ir \emph{BirA}
         genų ekspresiją, bei TRE promotoriumi, skatinančiu Tbx5 transkripcijos
@@ -572,6 +568,8 @@ persidengiančių regionų procentai nustatyti tarp šių mėginių:
         širdies fibroblastų ląstelėmis ir tarp mėginio, kuriame nebuvo HAND2
         faktoriaus.
   \end{itemize}
+
+\newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TBX5 MOTYVO NUSTATYMAS
@@ -856,7 +854,7 @@ Unikalios motyvų funkcijos aprašytos sąraše:
         \begin{itemize}
             \item \textbf{BP:} dalyvauja teigiamoje fibroblastų
                 proliferacijoje, atsako į estradiolio - moteriško
-                lytinio hormono - procesuose. Taip pat būdinga teigiamas
+                lytinio hormono - procesuose. Taip pat būdingas teigiamas
                 transkripcijos reguliavimas.
             \item \textbf{CC:} aptinkamas branduolyje ir nukleoplazmoje.
         \end{itemize}
@@ -870,7 +868,7 @@ Unikalios motyvų funkcijos aprašytos sąraše:
 
 \section{Išvados}
 Atlikus Tbx5 transkripcijos faktoriaus analizę su skirtingomis naminės pelės
-ląstelėmis, kurioms buvo taikyti skirtintingi poveikiai, gauti rezultatai buvo
+ląstelėmis, kurioms buvo taikyti skirtingi poveikiai, gauti rezultatai buvo
 apibendrinti:
 
 \begin{itemize}
@@ -893,7 +891,6 @@ apibendrinti:
         faktorių GATA4, HAND2, MEF2C, TBX5 rinkiniu bei rinkiniu, kuriame
         nebuvo Akt1, tačiau buvo transkripcijos faktorių.
 \end{itemize}
-
 
 \newpage
 
