--- a/Latex/kursinis_darbas.tex
+++ b/Latex/kursinis_darbas.tex
@@ -7,7 +7,6 @@
 \usepackage{caption}
 \usepackage{makecell}
 \usepackage[euler]{textgreek}
-\usepackage{hyperref}
 \usepackage{multirow}
 \usepackage{boldline}
 \usepackage{floatrow}
@@ -21,6 +20,7 @@
 \newfloatcommand{capbtabbox}{table}[][\FBwidth]
 \usepackage{blindtext}
 \onehalfspacing
+\usepackage[hidelinks]{hyperref}
 
 \newcommand{\EE}{\mathbb{E}\,} % Mean
 \newcommand{\ee}{{\mathrm e}}  % nice exponent
@@ -61,13 +61,13 @@
 \bigskip
 \vskip 40pt
 
-\hskip 140pt {\large Autorius: Danielė Stasiūnaitė}
+\hskip 140pt {\large Autorė: Danielė Stasiūnaitė}
 
 \hskip 140pt{\large VU el. p.: (daniele.stasiunaite@mif.stud.vu.lt)}
 \bigskip
 \vskip 20pt
 
-\hskip 140pt {\large Darbo vadovas: J. m. d. Kotryna Kvederavičiūtė}
+\hskip 140pt {\large Darbo vadovė: J. m. d. Kotryna Kvederavičiūtė}
 \vskip 60pt
 \vskip 40pt
 \centerline{\large \textbf{Vilnius}}
@@ -89,68 +89,67 @@
 
 \section*{Santrauka}
 Širdies regeneracijos procesų tyrinėjimas yra svarbi sritis, galinti
-prisidėti prie širdies ligų  gydymo bei širdies audinių atstatymo po
+prisidėti prie širdies ligų gydymo bei širdies audinių atstatymo po
 pažeidimų (pvz., širdies raumens plyšimo). Sėkmingam ląstelių regeneracijos
 taikymui praktikoje svarbu suprasti šio proceso mechanizmus bei išsiaiškinti
 juose dalyvaujančius genus bei jų svarbą.
 
-Tbx5 - Tbx5 geno koduojamas vienas iš daugelio kardiogeninių transkripcijos
-faktorių, aktyvuojančių genus, kurie dalyvauja širdies vystymosi
-embriogenezės metu bei audinio atstatyme regeneracijos metu.
+Tbx5 - \emph{Tbx5} geno koduojamas vienas iš daugelio kardiogeninių
+transkripcijos faktorių, aktyvuojančių genus, kurie dalyvauja širdies
+vystymosi embriogenezės metu bei audinio atstatyme regeneracijos metu.
                                                                                      
-Šiame darbe naudojantis R programavimo kalbos bibliotekomis bei
+Šiame darbe, naudojantis R programavimo kalbos bibliotekomis bei
 bioinformatiniais komandinės eilutės bei internetiniais duomenų apdorojimo
-bei analizės įrankiais išanalizuota, kokiuose ChIP sekoskaitos metodu gautų
+bei analizės įrankiais, išanalizuota, kokiuose ChIP sekoskaitos metodu gautų
 naminės pelės (lot. \emph{Mus musculus}) ląstelių pikų mėginiuose Tbx5
 transkripcijos faktoriaus motyvų yra daugiausiai bei kokie motyvai gali būti
 identifikuoti analizuojamuose mėginiuose.
 
-<TAISYTI>
-
-Atlikta analizė parodė, kad 
-Atliktos analizės metu mėginiuose identifikuota daug skirtingų motyvų,
-susijusių su audinių regeneracijos metu vykstančiais procesais.
-Daugiausiai tyrinėjamo Tbx5 transkripcijos faktoriaus motyvų identifikuota
-naminių pelių embrionų fibroblastų ląstelėse, kurioms papildomai veiktos
-kitais kardiogeniniais transkripcijos faktoriais. Rezultat. Mažiausias Tbx5 transkripcijos faktoriaus motyvų skaičius
-būdingas fibroblastams, kurie buvo veikti ne pilnu kardiogeninių faktorių
-rinkiniu.
-
-<TAISYTI>
+Atlikta statistinė duomenų analizė parodė, kad panašiose ląstelėse,
+kurioms buvo taikytos skirtingos eksperimentinės sąlygos, ChIP sekoskaitos
+duomenys bei Tbx5 transkripcijos faktoriaus motyvų skaičius skiriasi itin
+stipriai, tačiau \emph{de novo} identifikuotuose motyvuose vyrauja bendra
+tendencija - identifikuoti motyvai yra susiję su ląstelių diferenciacija
+bei gali būti reikšmingi regeneracijos procese.
 
 \hfill \break
-\textbf{Raktiniai žodžiai:} ChIP sekoskaita, transkripcijos faktorius, Tbx5,
-        pikas, motyvas, R.
+\textbf{Raktiniai žodžiai:} regeneracija, ChIP sekoskaita (ChIP-seq),
+    transkripcijos faktorius, Tbx5, motyvas, R.
 \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % ANGLIŠKOS SANTRAUKOS PUSLAPIS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-<TAISYTI>
+
 \section*{Summary}
 The investigation of regeneration processes is an important field of research
-that plays a significant role in the treatment of various diseases and injuries.
-Therefore, it is mandatory to determine and apprehend the mechanisms and gene
+that may play a significant role in heart disease treatment and heart tissue
+repair after physical heart damage (for example, cardiac rupture).
+Therefore, in order to successfully apply cell regeneration methods in practice,
+it is mandatory to determine and apprehend the mechanisms and gene
 products that regulate regeneration processes.
 
-In this work, the analysis of the ChIP sequencing peaks samples that were
+Tbx5 - cardiogenic transcription factor that is encoded by \emph{Tbx5} gene.
+This factor activates genes that are involved in heart development during
+embryogenesis and tissue repair during regeneration.
+
+In this work, the analysis of the ChIP sequencing samples that were
 retrieved from different house mouse (lat. \emph{Mus musculus}) cells was
 conducted using functions from R programming language libraries and performing
-analysis steps using bioinformatics command-line tools and online services
+analysis' steps using bioinformatics' command-line tools and online services
 in order to determine what type of house mouse cells has the greatest number
-of Tbx5 transcription factor motifs and what factors might have an impact on
-total Tbx5 motif hit count differences among house mouse genome sequences.
+of Tbx5 transcription factor motif sequences and what other motifs can be
+identified in the samples of interest.
 
-The undertaken analysis identified an ample number of motifs. An abundance
-of key interest Tbx5 transcription factor was identified in the second
-chromosome of house mouse embryonic fibroblasts that were treated with
-serine/threonine kinase 1 (Akt1) and GATA4, HAND2, MEF2C cardiogenic
-transcription factors. The least count of Tbx5 transcription factor motifs
-is common for fibroblasts that were not treated with complete cardiogenic
-transcription factor set. 
-<TAISYTI>
+The undertaken statistical analysis indicated that ChIP sequencing data and
+Tbx5 transcription factor motif count notably differ between analyzed
+samples. On the other hand, after performing \emph{de novo} motif discovery, it
+was determined that identified motifs are all related to cell differentiation
+and may contribute to regeneration process mechanisms.
+
 \hfill \break
-\textbf{Keywords:} ChIP-seq, transcription factor, Tbx5, peak, motif, R.
+\textbf{Keywords:} regeneration, ChIP sequencing (ChIP-seq),
+    transcription factor, Tbx5, motif, R.
 \newpage
 
 %%%%%%%%%%%%%%%%%%%
@@ -176,9 +175,10 @@ pagrindinę funkciją atlieka kamieninės ląstelės bei įvairūs transkripcijo
 reguliavimo faktoriai, gebantys prisijungti prie DNR chromatino ir skatinti
 arba slopinti specifinių genų transkripciją.
 
-Sėkmingam regeneracijos procesų mechanizmų supratimui būtina išsiaiškinti, 
-kokie transkripcijos faktoriai dalyvauja šiame procese bei kokias funkcijas jie
-atlieka.
+Regeneracijos procesų supratimui ir taikymui būtina išsiaiškinti, kokie
+transkripcijos faktoriai dalyvauja šiame procese bei kokias funkcijas jie
+atlieka, todėl šio darbo metu atlikta kardiogeninio transkripcijos
+faktoriaus - Tbx5 - analizė iš naminių pelių širdžių išgautų ląstelių.
 
 \subsection*{Darbo tikslas}
 
@@ -191,10 +191,14 @@ ląstelėms daro didelę įtaką Tbx5 transkripcijos faktoriaus motyvų skaičiu
     \item Įvertinti pikų skirtumus tarp mėginių, taikant skirtingus statistinių
         duomenų vaizdavimo būdus.
     \item Nustatyti, kokioms širdies ląstelėms būdingas didžiausias Tbx5
-        transkripcijos faktoriaus motyvo atitikimų skaičius.
-    \item Atlikus de novo motyvų paiešką, nustatyti, kokios biologinės
+        transkripcijos faktoriaus motyvo taikinių skaičius.
+    \item Atlikus \emph{de novo} motyvų paiešką, nustatyti, kokios biologinės
         funkcijos yra būdingos identifikuotiems motyvams.
 \end{itemize}
+
+Atskiruose šio darbo poskyriuose pateikiami statistinius duomenų skirtumus
+vizualizuojantys grafikai bei gauti Tbx5 ir \emph{de novo} motyvų
+identifikavimo analizių rezultatai.
 
 \newpage
 
@@ -210,11 +214,11 @@ sekų ir atviro chromatino regionus. Taip pat duomenų bazėje saugomi
 nekartografuojamų regionų duomenys bei potencialūs žmonių bei naminių pelių
 regionai, prie kurių gali jungtis transkripcijos faktoriai.
 
-Ši duomenų bazė pasirinkta dėl sistemiškai surinktų ChIP-seq eksperimentų,
-kurių metu gauti rezultatai yra unifikuotai apdoroti ir paruošti tyrėjų
-meta-analizėms.
+Ši duomenų bazė pasirinkta dėl sistemiškai surinktų ChIP sekoskaitos
+eksperimentų, kurių metu gauti rezultatai yra unifikuotai apdoroti ir
+paruošti tyrėjų meta-analizėms.
 
-GTRD duomenų bazėje duomenys saugomi binariniu anotacijų formatu \emph{bigBed},
+GTRD duomenų bazėje duomenys saugomi binariniu anotacijų formatu bigBed,
 leidžiančiu atvaizduoti pasirinktą chromosomos regioną interaktyviose genominės
 informacijos vizualizavimo naršyklėse (pavyzdžiui, UCSC Genome
 Browser\cite{UCSCGB}) efektyviau nei tekstinis BED formatas.
@@ -222,8 +226,8 @@ Browser\cite{UCSCGB}) efektyviau nei tekstinis BED formatas.
 \subsection{Pasirinktų mėginių charakteristika}
 Analizė atlikta, naudojantis 3 nepriklausomais eksperimentais, kuriuos iš viso
 sudarė 7 skirtingi mėginiai. Pirmoje lentelėje (1 lentelė) pateikta informacija
-apie tyrimui atlikti naudotus duomenis, surinktus iš naminės pelės
-(lot. \emph{Mus musculus}) ląstelių.
+apie tyrimui atlikti naudotus duomenis, surinktus iš naminių pelių
+(lot. \emph{Mus musculus}) širdžių ląstelių.
 
 \begin{table}[htb]
     \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
@@ -293,21 +297,20 @@ apie tyrimui atlikti naudotus duomenis, surinktus iš naminės pelės
         Response Element}). Tai yra 7 DNR sekos fragmentai,
         sudaryti iš 19 nukleotidų ir atskirti trumpesniais sekų fragmentais.
     \item \textbf{sb431542}: stipriai veikianti, selektyvi cheminė medžiaga;
-        transformuojančio augimo faktoriaus {\textbeta} (TGF-{\textbeta})
-        inhibitorius.
+        augimo faktoriaus inhibitorius.
     \item \textbf{xav939}: stipriai veikianti cheminė medžiaga; tankirazės
-        inhibitorius. Tankirazė slopina TERF1 baltymo, stabdančio
+        inhibitorius. Tankirazė slopina specialaus baltymo, stabdančio
         telomerazės veiklą, jungimąsi prie telomerinių DNR sekų.
-    \item \textbf{AGHMT}: AKT1 - serino/treonino kinazė 1; GATA4, HAND2, MEF2C,
+    \item \textbf{AGHMT}: Akt1 - serino/treonino kinazė 1; GATA4, HAND2, MEF2C,
         Tbx5 - kardiogeniniai transkripcijos faktoriai.
-    \item \textbf{GHMT}: GATA4, HAND2, MEF2C, TBX5 transkripcijos faktorių
+    \item \textbf{GHMT}: GATA4, HAND2, MEF2C, Tbx5 transkripcijos faktorių
         komplektas.
     \item \textbf{GMT}: GATA4, MEF2C, Tbx5 transkripcijos faktorių komplektas.
-    \item \textbf{sc-17866x/ sc-17866}: iš ožkų išskirti antikūnai,
+    \item \textbf{sc-17866x/sc-17866}: iš ožkų išskirti antikūnai,
         atpažįstantys žmonių, pelių ir žiurkių Tbx5 antigeną.
 \end{itemize}
 
-\subsection{Pasirinktų eksperimentų apžvalga}
+\subsection{Pasirinktų mėginių apžvalga}
 \begin{itemize}
     \item \textbf{EXP030898}: vienas mėginys iš septyniolikos eksperimento
         metu tirtų mėginių. Eksperimente buvo siekiama patvirtinti arba
@@ -315,18 +318,17 @@ apie tyrimui atlikti naudotus duomenis, surinktus iš naminės pelės
         identifikiavimą prie chromatino jungiantis keliems transkripcijos
         faktoriams.
 
-        HL - 1 širdies raumens ląstelės buvo infekuotos su adenovirusu,
-        ekspresuojančiu troponiną T, kuris skatina \emph{rtTA} ir \emph{BirA}
-        genų ekspresiją, bei TRE promotoriumi, skatinančiu Tbx5 transkripcijos
+        HL - 1 širdies raumens ląstelės buvo infekuotos su adenovirusu
+        bei pridėtu TRE promotoriumi, skatinančiu Tbx5 transkripcijos
         faktoriaus geno raišką.
     \item \textbf{EXP058852}: prieširdžių ląstelės buvo du kartus po 24
         valandas laikytos mišinyje su retrovirusais. Papildomi poveikiai nebuvo
         taikyti.
     \item \textbf{EXP062056}: eksperimente ląstelės buvo infekuotos su GATA4,
         Mef2c, ir Tbx5 transkripcijos faktorius sintetinančiais retrovirusais.
-        Ląstelės augintos terpėje, kurioje buvo {Tgf\textbeta} inhibitoriaus
-        sb431542, skatinančio kardiomiocitų diferenciaciją iš pliuripotentinių
-        kamieninių ląstelių, ir Wnt inhibitoriaus xav939, stabdančio
+        Ląstelės augintos terpėje, kurioje buvo inhibitoriaus sb431542,
+        skatinančio kardiomiocitų diferenciaciją iš pliuripotentinių
+        kamieninių ląstelių, ir inhibitoriaus xav939, stabdančio
         nediferencijuotų ląstelių sintezę ir skatinančio progenitorinių
         ląstelių kardiomiogenezę.
 \end{itemize}
@@ -337,13 +339,13 @@ skirtingais poveikiais tirti embrionų fibroblastų mėginiai:
 
 \begin{itemize}
     \item \textbf{EXP058843}: embrionų fibroblastai veikti AGHMT. Esant
-        prisijungusiems kardiogeniniams transkripcijos faktoriams, AKT1
+        prisijungusiems kardiogeniniams transkripcijos faktoriams, Akt1
         skatina fibroblastų diferenciaciją į širdies ląsteles - kardiomiocitus.
-    \item \textbf{EXP058847}: neįtraukta AKT1 serino/treonino kinazė 1.
+    \item \textbf{EXP058847}: neįtraukta Akt1 serino/treonino kinazė 1.
     \item \textbf{EXP058850}: į kardiogeninių transkripcijos faktorių mišinį
         neįtrauktas HAND2 transkripcijos faktorius.
-    \item \textbf{EXP058856}: ląstelės veiktos tik vienu faktoriumi, kuris
-        straipsnyje nebuvo specifikuotas.??????
+    \item \textbf{EXP058856}: ląstelės veiktos tik vienu kardiogeniniu 
+        transkripcijos faktoriumi.
   \end{itemize}
 \newpage
 
@@ -361,7 +363,7 @@ ataskaitas HTML formatu bei kurti struktūrizuotus puslapius, apjungiant
 iš daugelio Rmd failų gautus HTML ataskaitų failus.
 
 \subsection{Pikų skaičiaus nustatymas mėginiuose}
-\emph{Tbx5} pikų skaičius skirtinguose mėginiuose apskaičiuotas su
+Pikų skaičius skirtinguose mėginiuose apskaičiuotas su
 standartine R ilgio funkcija \emph{length()}, kuri pritaikyta \emph{GRanges}
 objektui, aprašančiam genomines pozicijas bei su jomis susijusias anotacijas.
 Objektas sukurtas su \emph{rtracklayer}\cite{R_TRACK} bibliotekos funkcija
@@ -371,14 +373,14 @@ Pikų skaičių mėginiuose atvaizduojanti stulpelinė diagrama sukurta su
 \emph{ggplot2}\cite{R_GGPLOT} bibliotekos \emph{geom\_bar()} funkcija.
 
 \subsection{Pikų skaičiaus nustatymas chromosomose}
-Transkripcijos faktoriaus pikų skaičius skirtingose chromosomose kiekvienam
+Pikų skaičius skirtingose chromosomose kiekvienam
 mėginiui apskaičiuotas, naudojantis standartine R funkcija \emph{length()},
 pritaikyta atskiroms chromosomoms, kurių pozicijos aprašytos \emph{GRanges}
 objekte. Gauti rezultatai normalizuoti apskaičiuotą pikų skaičių padalinus
 iš kiekvienos chromosomos ilgio. Normalizavimas taikytas, siekiant įvertinti
-pikų skaičių tarp chromosomų, nepriklausomai nuo chromosomos ilgio.
+pikų skaičių tarp chromosomų nepriklausomai nuo chromosomos ilgio.
 
-Kiekvieno mėginio Tbx5 transkripcijos faktoriaus pasiskirstymas
+Kiekvieno mėginio pikų pasiskirstymas
 chromosomose atvaizduotas su \emph{ggplot()} ir papildoma funkcija
 \emph{facet\_wrap()}, sukuriančia atskirus grafikus pagal pasirinktą elementą -
 chromosomas.
@@ -386,13 +388,15 @@ chromosomas.
 \subsection{Persidengiančių pikų procentinė dalis}
 Persidengiančių pikų tarp mėginių procentinė dalis nustatyta su modifikuota
 \emph{Jaccard()} funkcija, apskaičiuojančia, kiek yra sutampančių regionų tarp
-dviejų mėginių poros. Naudojantis nemodifikuota funkcija, Jaccard koeficientas
-apskaičiuojamas pagal išraišką:
+dviejų mėginių poros. Naudojantis nemodifikuota funkcija, \emph{Jaccard}
+koeficientas apskaičiuojamas pagal išraišką:
 
                 \[ J(A, B) =  \frac{|A \cap B|}{|A \cup B|} \]
 
-\emph{Jaccard} koeficientas gaunamas iš rinkiniams A ir B bendrų duomenų ilgio
-padalinus dviejų duomenų rinkinių bendrą duomenų ilgį.
+\emph{Jaccard} koeficientas gaunamas iš rinkiniuose A ir B sutampančių duomenų
+ilgio padalinus dviejų duomenų rinkinių bendrą duomenų ilgį.
+
+\newpage
 
 Modifikavus \emph{Jaccard} koeficiento gavimo funkciją, koeficientas
 apskaičiuojamas pagal išraišką, kur sutampančių A ir B rinkinių duomenų ilgis
@@ -402,20 +406,20 @@ padalinamas iš A rinkinio ilgio:
 
 \emph{Jaccard} koeficiento skaičiavimo funkcija modifikuota, nes skaičiuojant
 koeficientą su standartine \emph{Jaccard} funkcija, gaunamas itin didelis
-pikų sąjungos skaičius, o persidengiančių pikų skaičius gaunamas mažas,
+pikų sąjungos skaičius, o persidengiančių pikų skaičius - mažas,
 todėl persidengiančių pikų skaičių padalinus iš pikų sąjungos gaunamas
 itin mažas koeficientas, kurio apskaičiuota procentinė dalis neretai neviršijo
 1\%.
 
-Tam, jog būtų galima patikimiau įvertinti, kokia pirmojo mėginio procentinė
-pikų dalis persidengia su antruoju mėginiu, persidengiančių pikų skaičius
-padalintas iš pirmojo mėginio pikų skaičiaus.
+Tam, jog būtų galima įvertinti, kokia pirmojo mėginio dalis persidengia su
+antruoju mėginiu, persidengiančių pikų skaičius padalintas iš pirmojo
+mėginio bendro pikų skaičiaus.
 
 Gauti rezultatai atvaizduoti spalvų intensyvumo grafike (angl. \emph{heatmap}),
 sukurtame su \emph{ggplot()} ir papildoma funkcija \emph{geom\_tile()}.
 
 \subsection{Tbx5 motyvo nustatymas}
-Šiame etape genomines pozicijas aprašantys \emph{bigBed} formato failai
+Šiame etape genomines pozicijas aprašantys bigBed formato failai
 konvertuoti į BED formato failus, pasinaudojus UCSC komandinės eilutės programa
 \emph{bigBedToBed}\cite{BBTOBED}.
 
@@ -439,7 +443,7 @@ pirmame paveiksle (1 pav.).
 
 \begin{figure}[htb]
     \begin{center}
-        \includegraphics[width=0.5\linewidth]{../Figures/tbx5_motif.png}
+        \includegraphics[width=0.4\linewidth]{../Figures/tbx5_motif.png}
         \vspace{-2\baselineskip}
         \caption*{\small\textbf{1 pav. Tbx5 transkripcijos faktoriaus
                                 sekos logotipas}}
@@ -453,13 +457,11 @@ pagrindinėmis \emph{ggplot()} ir \emph{geom\_bar()} funkcijomis.
 Praturtintų sekų radimui panaudota komandinės eilutės įrankio HOMER\cite{HOMER}
 (v4.11 versija) programa \emph{findMotifsGenome.pl}, analizuojanti BED formato
 failus (faile specifikuotas pozicijas), ir ieškanti praturtintų sekų atitikimo
-anotuotame naminės pelės \emph{mm10} referentiniame genome. Tarp mėginių
-sutampantys motyvai nustatyti, naudojantis R biblioteka
-\emph{UpSetR}\cite{UPSETR}.
+anotuotame naminės pelės \emph{mm10} referentiniame genome.
 
 \subsection{Praturtintų sekų biologinių funkcijų nustatymas}
 Identifikuotų motyvų biologinės funkcijos nustatytos, pasinaudojus
-UniProt\cite{UNIPROT} duomenų bazės genų ontologijos (angl. \emph{Gene
+UniProtKB\cite{UNIPROT} duomenų bazės genų ontologijos (angl. \emph{Gene
 Ontology (GO)}) biologinių procesų, ląstelinių komponentų ir molekulinių
 funkcijų klasifikacija.
 
@@ -501,20 +503,20 @@ pikų skaičiaus pasiskirstymas skirtinguose mėginiuose.
     \end{center}
 \end{figure}
 
-Remiantis diagrama didžiausias Tbx5 transkripcijos faktoriaus pikų skaičius
+Remiantis diagrama didžiausias pikų skaičius
 nustatytas mėginyje \small\emph{emb\_fibr\_r1\_1}, kuriame pelių embrionų
 fibroblastų ląstelės veiktos AGHMT faktoriais.
 Šį rezultatą palyginus su kitais to paties eksperimento mėginiais, kuriuose
 tirtas tas pats pelių embrionų fibroblastų ląstelių kamienas, tačiau ląstelės
-veiktos tik kai kuriais faktoriais, pastebimas gradualus Tbx5 transkripcijos
-faktoriaus pikų skaičiaus mažėjimas diagramoje
+veiktos tik kai kuriais faktoriais, pastebimas gradualus pikų skaičiaus
+mažėjimas diagramoje
 \small\emph{emb\_fibr\_r2\_2}, \small\emph{emb\_fibr\_r3\_3} ir
 \small\emph{emb\_fibr\_r4\_4} pavaizduotuose stulpeliuose (pažymėta
 oranžine spalva). Tarp šių mėginių pikų skirtumai ypač ryškūs - pikų
 skaičius skiriasi \(\sim\)25 tūkst. ir \(\sim\)100 tūkst. pikų.
 
 Mažiausiai pikų nustatyta mėginyje, kuriame tirti pelių naujagimių širdies
-fibroblastai paveikti inhibitoriais. Nepaisant to, kad abu inhibitoriai
+fibroblastai paveikti inhibitoriais. Nepaisant to, kad naudoti inhibitoriai
 skatina širdies ląstelių diferenciaciją\cite{HEART_CELL_DIFF_ARTCL} ir darant
 prielaidą, kad ChIP sekoskaitos duomenys yra tikslūs ir juose nėra
 metodo klaidų, mažas pikų skaičius rodo, kad papildomas veikimas inhibitoriais
@@ -522,17 +524,18 @@ gali daryti mažą įtaką transkripcijos faktoriaus jungimuisi prie DNR sekų.
 
 Remiantis gautais rezultatais pikų skaičius skirtingais poveikiais veiktose
 panašiose ląstelėse varijuoja itin stipriai, tačiau šiuos rezultatus reikia
-vertinti atsargiai, atsižvelgiant į ChIP metodu gautų duomenų paruošimo
-tikslumą ir teisingumą.
+vertinti atsargiai, atsižvelgiant į galimus ChIP sekoskaitos metodu gautų
+duomenų paruošimo netikslumus.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % PIKŲ SKAIČIUS ATSKIROSE CHROMOSOMOSE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-<TAISYTI ATLIKUS NORMALIZAVIMĄ>
+
 \subsection{Pikų pasiskirstymas chromosomose}
 Antrajame statistinių duomenų vaizdavimo etape patikrinta, kaip mėginių pikai
 pasiskirstę atskirose chromosomose, atlikus normalizavimą pagal chromosomų ilgį.
 
+<TAISYTINOS DALIES PRADŽIA (NĖRA NORMALIZAVIMO)>\\
 Vaizduojamuose grafikuose (4 pav.) didžiausias pikų skaičius nustatytas
 pirmoje, antroje ir penktoje chromosomose. Naminės pelės pirmoji chromosoma yra
 pati didžiausia, turinti 195 milijonų bazių porų, antroji chromosoma sudaryta
@@ -545,7 +548,8 @@ nustatytas devynioliktoje (61 Mbp), X (169 Mbp) ir Y (91 Mbp) chromosomose.
     \begin{center}
         \includegraphics[width=1\linewidth]{../Figures/peak_counts_by_chr.png}
         \vspace{-2\baselineskip}
-        \caption*{\small\textbf{4 pav. Pikų pasiskirstymas chromosomose}}
+        \caption*{\small\textbf{4 pav. Pikų pasiskirstymo chromosomose
+                  stulpelinės diagramos}}
     \end{center}
 \end{figure}
 
@@ -554,9 +558,9 @@ chromosomoje. Taip pat grafikuose išsiskiria kontrolinis HL - 1 širdies
 ląstelių mėginys, kuriame didžiausias regionų skaičius nustatytas penktojoje
 chromosomoje.
 
-<TAISYTI ATLIKUS NORMALIZAVIMĄ>
+<TAISYTINOS DALIES PABAIGA (NĖRA NORMALIZAVIMO)>
 
-Remiantis pavaizduotomis regionų skaičiaus pasiskirstymo chromosomose
+Remiantis pavaizduotomis pikų skaičiaus pasiskirstymo chromosomose
 stulpelinėmis diagramomis, itin išsiskiriantis atrankumas chromosomų atžvilgiu
 nenustatytas, todėl galima teigti, jog šiame analizės etape duomenų
 problematiškumas nepastebimas arba jo nėra.
@@ -589,7 +593,7 @@ persidengiančių pikų procentai nustatyti tarp šių mėginių:
         fibroblastų ląstelės, veiktos inhibitoriais, ir mėginio, kuriame
         tirti embrionų fibroblastai, veikiant AGHMT.
     \item \textbf{81.092 \%} - tarp mėginio, kuriame tirti embrionų
-        fibroblastai ir mėginio, kuriame nebuvo AKT1.
+        fibroblastai veikti AGHMT ir mėginio, kuriame nebuvo AKT1.
     \item \textbf{77.827 \%} - tarp mėginio su inhibitoriais veiktomis
         širdies fibroblastų ląstelėmis ir mėginio, kuriame nebuvo AKT1.
     \item \textbf{76.948 \%} - tarp mėginio, kuriame nebuvo HAND2 faktoriaus,
@@ -599,38 +603,44 @@ persidengiančių pikų procentai nustatyti tarp šių mėginių:
         faktoriaus.
   \end{itemize}
 
+Mažiausią panašumą su kitais mėginiais turi mėginys
+(\small\emph{emb\_fibr\_r4\_4}), kuriame embrionų fibroblastų ląstelės
+veiktos ne pilnu kardiogeninių transkripcijos faktorių (GATA4, HAND2, MEF2C,
+Tbx5) komplektu.
 \newpage
 
-Remiantis spalvų intensyvumo grafiku didžiausius persidengiančių pikų skaičius
-tarp mėginių turi tie patys mėginiai, kurie buvo nustatyti ir 4.1 bei 4.2
-poskyriuose, todėl statistinis duomenų vaizdavimas, taikant vizualizavimo
-funkcijas skirtingiems mėginių duomenims padeda įžvelgti duomenų skirtumus
-ir grafikuose išskirti tuos pačius mėginius, turinčius maksimalias ir
-minimalias reikšmes.
+Remiantis spalvų intensyvumo grafiku didžiausius ir mažiausius persidengiančių
+pikų skaičius tarp mėginių turi tie patys mėginiai
+(\small\emph{emb\_fibr\_r1\_1}, \small\emph{emb\_fibr\_r4\_4}), kuriems 4.1 bei
+4.2 poskyriuose buvo nustatytos maksimalios ir minimalios reikšmės, todėl
+statistinis duomenų vaizdavimas, taikant skirtingas vizualizavimo funkcijas
+padeda įvertinti duomenų skirtumus ir grafikuose išskirti tuos pačius
+mėginius, turinčius maksimalias ir minimalias tiriamų dydžių reikšmes.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TBX5 MOTYVO NUSTATYMAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Tbx5 motyvo pasiskirstymas mėginiuose}
-Įvertinus vizualizuotų duomenų skirtumus, vykdomos analizės metu nustatyta,
-kiek buvo nustatytas Tbx5 motyvo taikinių skaičius skirtinguose mėginiuose.
-Rezultatas pateiktas šeštame paveiksle (6 pav.).
+Įvertinus vizualizuotų duomenų skirtumus, vykdomos analizės metu nustatytas
+Tbx5 motyvo taikinių skaičius skirtinguose mėginiuose. Rezultatas pateiktas
+šeštame paveiksle (6 pav.).
 
 \begin{figure}[htb]
     \begin{center}
         \includegraphics[width=0.5\linewidth]{../Figures/tf_hit_percentage.png}
         \vspace{-2\baselineskip}
-        \caption*{\small\textbf{6 pav. Tbx5 motyvų atitikimų skaičiaus palyginimo
+        \caption*{\small\textbf{6 pav. Tbx5 motyvų taikinių skaičiaus palyginimo
                                 sudėtinė diagrama}}
     \end{center}
 \end{figure}
 
 Daugiausiai Tbx5 motyvo sekos taikinių nustatyta mėginyje,
 kuriame embrionų fibroblastai veikti serino/treonino kinaze 1 (Akt1) bei
-keliais transkripcijos faktoriais (GATA4, HAND2, MEF2C, Tbx5).
+keliais transkripcijos faktoriais (GATA4, HAND2, MEF2C, Tbx5)
+(\small\emph{emb\_fibr\_r1\_1}).
 
-Mažiausias Tbx5 motyvo sekų skaičius nustatytas mėginiuose, kuriuose embrionų
+Mažiausias Tbx5 motyvo sekų skaičius nustatytas mėginyje, kuriame embrionų
 fibroblastai veikti tik vienu transkripcijos faktoriumi
 (\small\emph{emb\_fibr\_r4\_4}), ir mėginyje, kuriame pelių naujagimių
 širdies fibroblastai veikti inhibitoriais
@@ -638,10 +648,10 @@ fibroblastai veikti tik vienu transkripcijos faktoriumi
 
 Remiantis sudėtine diagrama galima teigti, kad didesnis mėginių pikų skaičius
 ne visada lemia didesnį transkripcijos faktoriaus motyvų skaičių. Tai įrodo
-mėginyje \small\emph{crdc\_fibr\_r1\_2} nustatytas Tbx5 motyvo skaičius,
+mėginyje \small\emph{crdc\_mscl\_r1\_2} nustatytas Tbx5 motyvo skaičius,
 kurio procentinė dalis (8.32\%) yra mažesnė už mėginyje
 \small\emph{crdc\_fibr\_r1\_3} nustatyto motyvo sekų skaičių (11.98\%),
-nors \small\emph{crdc\_fibr\_r1\_2} mėginiui būdingas didesnis bendras pikų
+nors \small\emph{crdc\_mscl\_r1\_2} mėginiui būdingas didesnis bendras pikų
 skaičius.
 
 \newpage
@@ -653,15 +663,15 @@ sugeneruoti HTML formato failai, kuriuose buvo pateiktas identifikuotų motyvų
 sąrašas, išrikiuotas pagal \emph{p}-vertę didėjančia tvarka, motyvų sekų
 logotipai bei nuorodos į puslapius su pozicinėmis motyvų svorių matricomis.
 
-Trečioje lentelėje (3 lentelė) kiekvienam mėginiui pavaizduoti trys motyvai,
-turintys mažiausią \emph{p}-vertę bei apimantys didžiausią mėginių pilno sekų
-rinkinio dalį (procentiškai). Ketvirtame trečios lentelės stulpelyje nurodyta,
-kokią procentinę dalį mėginyje sudaro identifikuotas Tbx5 motyvas.
+Antroje lentelėje (2 lentelė) kiekvienam mėginiui pateikti trys identifikuoti
+motyvai, turintys mažiausią \emph{p}-vertę. Ketvirtame antros lentelės
+stulpelyje nurodyta, kokią procentinę dalį mėginyje sudaro identifikuotas
+Tbx5 motyvas.
 
 \begin{table}[htb]
     \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
     \small
-    \caption*{\small\textbf{3 lentelė. Identifikuotų motyvų pavyzdžiai}}
+    \caption*{\small\textbf{2 lentelė. Identifikuotų motyvų pavyzdžiai}}
     \vspace{0.1\baselineskip}
     \begin{tabular}{|c|c|c|c|c|}
     \hline
@@ -710,6 +720,17 @@ kokią procentinę dalį mėginyje sudaro identifikuotas Tbx5 motyvas.
 \let\thefootnote\relax\footnotetext{\textbf{*} - identifikuotas Tbx5 motyvas
 statistiškai patikimas.}
 
+Remiantis pateiktos lentelės duomenimis dažniausias mėginiuose pasikartojantis
+motyvas priklauso TRPS1 ir GATA3 transkripcijos faktoriams. Didžiausia
+Tbx5 motyvo procentinė dalis, atlikus \emph{de novo} motyvų paiešką su HOMER
+įrankiu, nustatyta tarp širdies raumens ląstelių mėginio bei širdies
+fibroblastų, veiktų inhibitoriais, mėginio (\small\emph{crdc\_mscl\_r1\_2},
+\small\emph{crdc\_fibr\_r1\_3}).
+
+Mėginyje, kuriame tirtos iš naminių pelių širdžių prieširdžių išgautos ląstelės
+(\small\emph{heart\_r1\_1}), identifikuotas Tbx5 motyvas nėra statistiškai
+patikimas, atsižvelgus į itin didelę \emph{p}-vertę. 
+
 Pateiktoje stulpelinėje diagramoje (7 pav.) vaizduojamas bendras identifikuotų
 motyvų skaičius kiekvienam mėginiui.
 
@@ -729,10 +750,11 @@ poskyriai) šie mėginiai turi mažiausią pikų skaičių bei mažiausią juos
 atitinkančių sekų rinkinį.
 
 Nepaisant šio atitikimo, remiantis 4.1 poskyrio rezultatais mėginys
-\small\emph{heart\_r1\_1} turi \(\sim\) 40 tūkst. daugiau pikų nei
-\small\emph{emb\_fibr\_r4\_4}, tačiau \emph{de novo} motyvų identifikacijos
-etape šiame mėginyje buvo nustatytas didžiausias motyvų skaičių (345 motyvai).
-Nustatyti motyvai yra \(\sim\)12 nukleotidų ilgio.
+\small\emph{heart\_r1\_1} turi \(\sim\) 50 tūkst. daugiau pikų nei
+\small\emph{emb\_fibr\_r4\_4} ir jo bendras pikų skaičius nėra maksimalus,
+tačiau \emph{de novo} motyvų identifikacijos etape šiame mėginyje buvo
+nustatytas didžiausias motyvų skaičius (345 motyvai). Nustatyti motyvai yra
+\(\sim\)12 nukleotidų ilgio.
 
 Patikrinus, kiek vienodų motyvų aptinkama visuose mėginiuose, buvo nustatyta,
 kad 131 motyvas yra būdingas visiems analizuojamiems mėginiams.
@@ -748,7 +770,7 @@ bazėje rezultatais, trečioje lentelėje (3 lentelė) pateikti motyvai:
     \item \textbf{Tbet:} Dalyvauja imuninės sistemos, baltymų metabolinių
         kelių procesuose. Taip pat pasireiškia organizmui reaguojant į
         dirgiklius.
-    \item \textbf{Eomes:} Dalyvauja įvairių ląstelių (pavyzdžiui,
+    \item \textbf{Eomes:} Dalyvauja įvairių ląstelių (pvz.,
         kardiomiocitų) diferenciacijoje, neurogenezėje, kamieninių ląstelių
         populiacijos palaikyme.
     \item \textbf{Mef2b:} Dalyvauja įvairių ląstelių diferenciacijoje.
@@ -767,7 +789,7 @@ bazėje rezultatais, trečioje lentelėje (3 lentelė) pateikti motyvai:
         citokinus bei progesteroną procesuose. Taip pat aktyvus nervų sistemos
         vystymosi metu.
     \item \textbf{Fra1:} Dalyvauja ląstelės ciklo valdyme, apoptoziniuose
-        procesuose bei embrionų vystymosi gimdoje procesuose.
+        bei embrionų vystymosi gimdoje procesuose.
     \item \textbf{Fra2:} Dalyvauja teigiamoje fibroblastų proliferacijoje,
         atsako į estradiolio - moteriško lytinio hormono - procesuose.
 \end{enumerate}
@@ -775,8 +797,9 @@ bazėje rezultatais, trečioje lentelėje (3 lentelė) pateikti motyvai:
 Apibendrinus gautus biologinių funkcijų rezultatus, identifikuoti motyvai
 atlieka svarbią funkciją organizmų vystymosi bei įvairių organų formavimosi
 eigoje. Ypač svarbūs transkripcijos faktoriai, kurie dalyvauja ląstelių
-diferenciacijoje (pvz., kardioblastų) bei širdies dalių formavimęsi, nes šie
-transkripcijos faktoriai galėtų prisidėti širdies audinių regeneracijos.
+diferenciacijoje (pvz., kardioblastų) bei širdies dalių formavimęsi, nes šių
+transkripcijos faktorių panaudojimas gali būti itin reikšmingas
+medicininiuose taikymuose.
 
 \newpage
 
@@ -795,10 +818,10 @@ buvo apibendrinti:
     \item Nepaisant panašių ląstelių analizavimo, skirtingų modifikacijų
         pritaikymas bei galimas netikslus ChIP sekoskaitos duomenų paruošimas
         lemia akivaizdžius duomenų skirtumus.
-    \item Tbx5 motyvo atitikimų skaičius tarp skirtingais poveikiais veiktų
-        ląstelių mėginių skiriasi itin stipriai.
-    \item De novo identifikuoti motyvai yra susiję su ląstelių diferenciacija
-        bei audinių regeneracija organizmo vystymosi eigoje.
+    \item Tbx5 transkripcijos faktoriaus motyvo taikinių skaičius tarp
+        skirtingais poveikiais veiktų ląstelių mėginių skiriasi itin stipriai.
+    \item \emph{De novo} identifikuoti motyvai yra susiję su ląstelių
+        diferenciacija bei audinių regeneracija organizmo vystymosi eigoje.
 \end{itemize}
 
 \newpage
@@ -812,7 +835,7 @@ buvo apibendrinti:
 
 \bibitem{REGENERATION} Kate MacCord, Jane Maienschein (2019) Philosophy of
 Biology: Understanding regeneration at different scales eLife 8:e46569
-https://doi.org/10.7554/eLife.46569
+https://doi.org/10.7554/eLife.46569.
 
 \bibitem{ORGANISMS} Mehta AS, Singh A. Insights into regeneration tool box:
 An animal model approach. Dev Biol. 2019 Sep 15;453(2):111-129.
@@ -856,7 +879,7 @@ for Statistical Computing, Vienna, Austria. URL https://www.R-project.org/.
 
 \bibitem{SCIK}Scikick. Utility for executing collections of computational
 notebooks.\\
-URL https://petronislab.camh.ca/pub/scikick/stable/docs/report/out\_html/introduction.html
+URL https://petronislab.camh.ca/pub/scikick/stable/docs/report/out\_html/introduction.html.
 
 \bibitem{R_TRACK} M. Lawrence, R. Gentleman, V. Carey: "rtracklayer: an {R}
 package for interfacing with genome browsers". Bioinformatics 25:1841-1842.
@@ -888,7 +911,7 @@ Ivan V. Kulakovskiy; Ilya E. Vorontsov; Ivan S. Yevshin; Ruslan N. Sharipov;
 Alla D. Fedorova; Eugene I. Rumynskiy; Yulia A. Medvedeva; Arturo Magana-Mora;
 Vladimir B. Bajic; Dmitry A. Papatsenko; Fedor A. Kolpakov; Vsevolod J. Makeev
 Nucl. Acids Res., Database issue, gkx1106 (11 November 2017)
-doi: 10.1093/nar/gkx1106
+doi: 10.1093/nar/gkx1106.
 
 \bibitem{HOMER} Heinz S, Benner C, Spann N, Bertolino E et al. Simple
 Combinations of Lineage-Determining Transcription Factors Prime cis-Regulatory
@@ -903,13 +926,13 @@ Bioinformatics, 33(18): 2938-2940, doi:10.1093/bioinformatics/btx364, 2017.
 knowledgebase in 2021 Nucleic Acids Res. 49:D1 (2021).
 
 \bibitem{UNIPROTKB} Boutet E, Lieberherr D, Tognolli M, Schneider M, Bairoch A.
-UniProtKB/Swiss-Prot Methods Mol. Biol. 406:89-112 (2007)
+UniProtKB/Swiss-Prot Methods Mol. Biol. 406:89-112 (2007).
 
 \bibitem{HEART_CELL_DIFF_ARTCL} Drowley L, Koonce C, Peel S, et al. Human
 Induced Pluripotent Stem Cell-Derived Cardiac Progenitor Cells in Phenotypic
 Screening: A Transforming Growth Factor-β Type 1 Receptor Kinase Inhibitor
 Induces Efficient Cardiac Differentiation. Stem Cells Transl Med.
-2016;5(2):164-174. doi:10.5966/sctm.2015-0114
+2016;5(2):164-174. doi:10.5966/sctm.2015-0114.
 
 \end{thebibliography}
 
